Fixes aux nav on small display
#67

--- a/rh/client/scss/layout/_case-studies.scss
+++ b/rh/client/scss/layout/_case-studies.scss
@@ -5,7 +5,8 @@
 .case-study-search {
   @include block;
   @include container;
-  padding: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .case-study-search .card {
