--- a/rh/client/scss/layout/_case-study-filter.scss
+++ b/rh/client/scss/layout/_case-study-filter.scss
@@ -57,7 +57,7 @@
   line-height: 1.5;
 }
 
-@include breakpoint(medium) {
+@include breakpoint(large) {
   .case-study-search-list {
     margin-bottom: $global-margin * 1.5;
     padding: 0;
