--- a/rh/client/scss/layout/_site-footer.scss
+++ b/rh/client/scss/layout/_site-footer.scss
@@ -74,6 +74,10 @@
   flex-direction: row;
 }
 
+.site-footer-aux .menu a {
+  padding: 0.7rem;
+}
+
 .site-footer-aux * {
   font-size: .8rem;
 }
